--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
+@font-face {
+  font-family: system;
+  src: local("C:\Users\Kyzyl Monteiro\Downloads\attachments.zip\ProductSans-Regular.ttf");
+}
 body {
-  font-family: Helevantica;
+  font-family: Segoe UI;
+  /*font-family: system;*/
 }
 #splash {
 	background-image:url("Banners/splash.png");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 }
+
 /*#video{
 	position: fixed;
 	right: 0;
@@ -36,7 +42,7 @@ body {
   border-top-left-radius: 25px;
   border-top-right-radius: 25px; 
   bottom: 0;
-  background-color: #fefefe;
+  background-color: #FBF9FF;
   width: 100%;
   -webkit-animation-name: slideIn;
   -webkit-animation-duration: 0.4s;
@@ -46,23 +52,35 @@ body {
 
 /* The Close Button */
 #close {
+  /*padding-top: 15px;*/
+  /*padding-right: 10px;*/
+  color: #FBF9FF;
+  float: right;
+}
+.closeIcon{
   padding-top: 15px;
   padding-right: 10px;
-  color: green;
-  float: right;
 }
 
 .modal-header {
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #3581B8;
   color: white;
 }
 
 .modal-body {padding: 2px 16px;}
 
 .modal-footer {
+  color: grey;
+  font-size: 15px;
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  display: inline-block;
+  /*padding-right: 100px;*/
+  /*position: fixed;*/
 }
 
 /* Add Animation */
@@ -91,29 +109,36 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: none;
-  color: orange;
+  background-color: rgba(0, 0, 0, 0.7);
+  /*rgba(254, 215, 102, 0.7); ghost white*/
+  /*#FBF9FF ghost #3FADAB*/
+  /*opacity: 0.5;*/
+  /*color: orange;*/
   text-align: center;
   display: inline-block;
 }
 .navBtn{
+  color: #3581B8;
+  opacity: 1.0;
   display:inline-block;    
   width:25%;
-  padding-bottom: 10px;
   text-align:center;
   /*padding: 10px; padding-bottom:2px;*/
 }
 button{
   /*background-color: green; */
-  background-color: none;
+  /*background-color: none;*/
   border: none;
-  color: green;
-  padding: 15px 32px;
+  color: #FBF9FF;
+  padding: 20px;
   text-align: center;
-  text-decoration: none;
   display: inline-block;
   font-size: 15px;
   border-radius: 10px;
+  margin-right: 25px;
+  margin-left: 25px;
+  background-color:  #738290;
+  font-family:  Segoe UI;
 }
 .header{
   overflow: hidden;
@@ -134,7 +159,6 @@ button{
   color: white;
   position: fixed;
 }
-
 #options{
   height: 225px;
   /*border: 1px solid lightgrey;*/
@@ -145,4 +169,134 @@ button{
   padding: 20px;
   /*border-top: 1px solid lightgrey;*/
   border-bottom: 1px solid lightgrey;
+}
+.onb{
+  font-size: 35px;
+  line-height: 200px;
+  height: 200px;
+  text-align: center;
+}
+.onb p {
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: middle;
+}
+#alert {
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top : 0px;
+  left : 0px;
+  background-color: #EA4D5E;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+}
+#exploreAlert{
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top : 0px;
+  left : 0px;
+  background-color: #7FDCA5;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+}
+
+
+
+/*slideshow*/
+
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color:  #738290;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+
+/* Caption text */
+/*.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}*/
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color:  #738290;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
 }
