--- a/style.css
+++ b/style.css
@@ -54,12 +54,13 @@ body {
 #close {
   /*padding-top: 15px;*/
   /*padding-right: 10px;*/
-  color: #FBF9FF;
+  color: #3581B8;
   float: right;
 }
 .closeIcon{
   padding-top: 15px;
   padding-right: 10px;
+  color: #FBF9FF;
 }
 
 .modal-header {
@@ -74,7 +75,7 @@ body {
 
 .modal-footer {
   color: grey;
-  font-size: 15px;
+  font-size: 10px;
   width: 100%;
   height: 60px;
   text-align: center;
@@ -129,7 +130,7 @@ button{
   /*background-color: green; */
   /*background-color: none;*/
   border: none;
-  color: #FBF9FF;
+  color: #3581B8;
   padding: 20px;
   text-align: center;
   display: inline-block;
@@ -137,7 +138,7 @@ button{
   border-radius: 10px;
   margin-right: 25px;
   margin-left: 25px;
-  background-color:  #738290;
+  background-color:  lightgrey;
   font-family:  Segoe UI;
 }
 .header{
@@ -176,6 +177,22 @@ button{
   height: 200px;
   text-align: center;
 }
+.onb1{
+  font-size: 20px;
+}
+.onb2{
+  font-size: 20px;
+}
+.onb2{
+  font-size: 20px;
+}
+.onb3{
+  font-size: 20px;
+}
+.onb4{
+  font-size: 20px;
+}
+
 .onb p {
   line-height: 1.5;
   display: inline-block;
@@ -183,6 +200,7 @@ button{
 }
 #alert {
   width: 100%;
+  font-size: 20px;
   text-align: center;
   position: fixed;
   top : 0px;
@@ -194,6 +212,7 @@ button{
   margin-bottom: 15px;
 }
 #exploreAlert{
+  font-size: 25px;
   width: 100%;
   text-align: center;
   position: fixed;
@@ -216,6 +235,15 @@ button{
   max-width: 1000px;
   position: relative;
   margin: auto;
+  text-align: center;
+  /*overflow: scroll;*/
+}
+.mySlides{
+  overflow: scroll; 
+  width: 80%;
+  padding-right: 10%;
+  padding-left: 10%;
+  vertical-align: middle;
 }
 
 /* Next & previous buttons */
@@ -226,13 +254,13 @@ button{
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: #738290;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
-  background-color:  #738290;
+  /*background-color:  ;*/
 }
 
 /* Position the "next button" to the right */
@@ -265,8 +293,8 @@ button{
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
@@ -300,3 +328,23 @@ button{
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
+
+/*scroll*/
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
